--- a/Minicase_2.ipynb
+++ b/Minicase_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[536641 rows x 9 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "Name: CustomerID, dtype: float64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "      <td>2.95</td>\n",
        "      <td>12662.0</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>17.70</td>\n",
+       "      <td>17.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1110</th>\n",
@@ -369,7 +369,7 @@
        "      <td>2.55</td>\n",
        "      <td>12662.0</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>15.30</td>\n",
+       "      <td>15.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1111</th>\n",
@@ -381,7 +381,7 @@
        "      <td>0.85</td>\n",
        "      <td>12662.0</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>10.20</td>\n",
+       "      <td>10.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1112</th>\n",
@@ -393,7 +393,7 @@
        "      <td>1.65</td>\n",
        "      <td>12662.0</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>19.80</td>\n",
+       "      <td>19.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1113</th>\n",
@@ -405,116 +405,29 @@
        "      <td>1.95</td>\n",
        "      <td>12662.0</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>23.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541726</th>\n",
-       "      <td>581570</td>\n",
-       "      <td>22139</td>\n",
-       "      <td>RETROSPOT TEA SET CERAMIC 11 PC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2011-12-09 11:59:00</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>12662.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>14.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541727</th>\n",
-       "      <td>581570</td>\n",
-       "      <td>23077</td>\n",
-       "      <td>DOUGHNUT LIP GLOSS</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2011-12-09 11:59:00</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>12662.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>25.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541728</th>\n",
-       "      <td>581570</td>\n",
-       "      <td>20750</td>\n",
-       "      <td>RED RETROSPOT MINI CASES</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2011-12-09 11:59:00</td>\n",
-       "      <td>7.95</td>\n",
-       "      <td>12662.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>15.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541729</th>\n",
-       "      <td>581570</td>\n",
-       "      <td>22505</td>\n",
-       "      <td>MEMO BOARD COTTAGE DESIGN</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2011-12-09 11:59:00</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>12662.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>19.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541730</th>\n",
-       "      <td>581570</td>\n",
-       "      <td>POST</td>\n",
-       "      <td>POSTAGE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-12-09 11:59:00</td>\n",
-       "      <td>18.00</td>\n",
-       "      <td>12662.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>18.00</td>\n",
+       "      <td>23.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5213 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       InvoiceNo StockCode                          Description  Quantity  \\\n",
-       "1109      536527     22809              SET OF 6 T-LIGHTS SANTA         6   \n",
-       "1110      536527     84347  ROTATING SILVER ANGELS T-LIGHT HLDR         6   \n",
-       "1111      536527     84945   MULTI COLOUR SILVER T-LIGHT HOLDER        12   \n",
-       "1112      536527     22242        5 HOOK HANGER MAGIC TOADSTOOL        12   \n",
-       "1113      536527     22244           3 HOOK HANGER MAGIC GARDEN        12   \n",
-       "...          ...       ...                                  ...       ...   \n",
-       "541726    581570     22139     RETROSPOT TEA SET CERAMIC 11 PC          3   \n",
-       "541727    581570     23077                  DOUGHNUT LIP GLOSS         20   \n",
-       "541728    581570     20750             RED RETROSPOT MINI CASES         2   \n",
-       "541729    581570     22505            MEMO BOARD COTTAGE DESIGN         4   \n",
-       "541730    581570      POST                              POSTAGE         1   \n",
+       "     InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "1109    536527     22809              SET OF 6 T-LIGHTS SANTA         6   \n",
+       "1110    536527     84347  ROTATING SILVER ANGELS T-LIGHT HLDR         6   \n",
+       "1111    536527     84945   MULTI COLOUR SILVER T-LIGHT HOLDER        12   \n",
+       "1112    536527     22242        5 HOOK HANGER MAGIC TOADSTOOL        12   \n",
+       "1113    536527     22244           3 HOOK HANGER MAGIC GARDEN        12   \n",
        "\n",
-       "               InvoiceDate  UnitPrice  CustomerID  Country  Revenue  \n",
-       "1109   2010-12-01 13:04:00       2.95     12662.0  Germany    17.70  \n",
-       "1110   2010-12-01 13:04:00       2.55     12662.0  Germany    15.30  \n",
-       "1111   2010-12-01 13:04:00       0.85     12662.0  Germany    10.20  \n",
-       "1112   2010-12-01 13:04:00       1.65     12662.0  Germany    19.80  \n",
-       "1113   2010-12-01 13:04:00       1.95     12662.0  Germany    23.40  \n",
-       "...                    ...        ...         ...      ...      ...  \n",
-       "541726 2011-12-09 11:59:00       4.95     12662.0  Germany    14.85  \n",
-       "541727 2011-12-09 11:59:00       1.25     12662.0  Germany    25.00  \n",
-       "541728 2011-12-09 11:59:00       7.95     12662.0  Germany    15.90  \n",
-       "541729 2011-12-09 11:59:00       4.95     12662.0  Germany    19.80  \n",
-       "541730 2011-12-09 11:59:00      18.00     12662.0  Germany    18.00  \n",
-       "\n",
-       "[5213 rows x 9 columns]"
+       "             InvoiceDate  UnitPrice  CustomerID  Country  Revenue  \n",
+       "1109 2010-12-01 13:04:00       2.95     12662.0  Germany     17.7  \n",
+       "1110 2010-12-01 13:04:00       2.55     12662.0  Germany     15.3  \n",
+       "1111 2010-12-01 13:04:00       0.85     12662.0  Germany     10.2  \n",
+       "1112 2010-12-01 13:04:00       1.65     12662.0  Germany     19.8  \n",
+       "1113 2010-12-01 13:04:00       1.95     12662.0  Germany     23.4  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +484,8 @@
     }
    ],
    "source": [
-    "print(\"5 самых прибыльных товаров:\", \", \".join(retail_no_cancel.groupby(\"InvoiceNo\", as_index=False).agg({\"Revenue\":\"sum\"}).nlargest(5, columns=\"Revenue\")[\"InvoiceNo\"].to_list()))"
+    "print(\"5 самых прибыльных товаров:\", \", \".join(retail_no_cancel.groupby(\"InvoiceNo\", as_index=False).agg({\"Revenue\":\"sum\"}) \\\n",
+    "    .nlargest(5, columns=\"Revenue\")[\"InvoiceNo\"].to_list()))"
    ]
   }
  ],
