--- a/Case_R.ipynb
+++ b/Case_R.ipynb
@@ -240,7 +240,8 @@
    ],
    "source": [
     "medium_revenue = df.groupby('medium', as_index=False).agg({'revenue':'sum'}).sort_values('revenue', ascending=False).reset_index(drop=True)\n",
-    "medium_revenue['ratio'] = (medium_revenue['revenue'] / medium_revenue['revenue'].sum() * 100).round(5) #Для удобства укажем долю дохода от каждого канала в процентах (переменная ratio)\n",
+    "#Для удобства укажем долю дохода от каждого канала в процентах (создадим переменную ratio)\n",
+    "medium_revenue['ratio'] = (medium_revenue['revenue'] / medium_revenue['revenue'].sum() * 100).round(5)\n",
     "medium_revenue.head(1)"
    ]
   },
