--- a/Case_R.ipynb
+++ b/Case_R.ipynb
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Несмотря на похожее распределение p-value во всех случаях значительно меньше 0.05, что позволяет отклонить нулевую гипотезу о равенстве средних конверсий. Итог: конверсия в выходные и в будни различна и это различие статистически значимо."
+    "Несмотря на похожее распределение, p-value во всех случаях значительно меньше 0.05, что позволяет отклонить нулевую гипотезу о равенстве средних конверсий. Итог: конверсия в выходные и в будни различна и это различие статистически значимо."
    ]
   },
   {
