--- a/Minicase_1.ipynb
+++ b/Minicase_1.ipynb
@@ -528,9 +528,9 @@
     "    print(\"Самый отклоняющийся день -\", anomaly_day)\n",
     "    daily_ads = data.query(\"event == 'view' & placement_date == @anomaly_day\").groupby(\"ad_id\").agg({\"event\":\"count\"})\n",
     "    if int(daily_ads.max() - daily_ads.mean()) > int(daily_ads.mean() - daily_ads.min()):\n",
-    "        return print(f\"Номера объявлений с аномально высоким числом показов в этот день: {daily_ads[daily_ads.event == daily_ads.max()[0]].index.to_list()}\")\n",
+    "        print(f\"Номера объявлений с аномально высоким числом показов в этот день: {daily_ads[daily_ads.event == daily_ads.max()[0]].index.to_list()}\")\n",
     "    else:\n",
-    "        return print(f\"Номера объявлений с аномально низким числом показов в этот день: {daily_ads[daily_ads.event == daily_ads.min()[0]].index.to_list()}\")\n",
+    "        print(f\"Номера объявлений с аномально низким числом показов в этот день: {daily_ads[daily_ads.event == daily_ads.min()[0]].index.to_list()}\")\n",
     "find_problem_ad(ads_data)"
    ]
   },
