--- a/Minicase_1.ipynb
+++ b/Minicase_1.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "4           120081  2019-01-13     2019-04-01    78 days"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,6 +639,61 @@
     "create_and_publish_diff[\"difference\"] = create_and_publish_diff[\"placement_date\"] - create_and_publish_diff[\"create_date\"]\n",
     "print(\"Среднее количество дней от даты создания рекламного клиента до запуска первой рекламы:\", create_and_publish_diff.difference.mean())\n",
     "create_and_publish_diff.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вычислите конверсию из создания рекламного клиента в запуск первой рекламы. Ответ дайте в процентах и округлите до сотых."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Коэффициент конверсии из создания рекламного клиента в запуск первой рекламы = 0.69%\n"
+     ]
+    }
+   ],
+   "source": [
+    "CR = round(df1[\"client_union_id\"].nunique() / df2[\"client_union_id\"].nunique() * 100, 2)\n",
+    "print(f\"Коэффициент конверсии из создания рекламного клиента в запуск первой рекламы = {CR}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Разбейте пользователей на интервалы и определите, сколько уникальных клиентов запустили свое первое объявление в первый месяц своего существования."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число уникальных клиентов, разместивших объявление: \n",
+      "От 3 месяцев до полугода    396\n",
+      "От 1 до 3 месяцев           263\n",
+      "От полугода и более         168\n",
+      "В первый месяц               11 (это ответ)\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_and_publish_diff[\"group\"] = pd.cut(create_and_publish_diff[\"difference\"], bins=pd.to_timedelta([0, 30, 90, 180, 365], unit=\"d\"),  \n",
+    "        labels=[\"В первый месяц\", \"От 1 до 3 месяцев\", \"От 3 месяцев до полугода\", \"От полугода и более\"])\n",
+    "print(\"Число уникальных клиентов, разместивших объявление: \\n\" + create_and_publish_diff[\"group\"].value_counts().to_string(), \"(это ответ)\")"
    ]
   }
  ],
