--- a/Case_F.ipynb
+++ b/Case_F.ipynb
@@ -76,7 +76,7 @@
     "### Задание 3  \n",
     "Предложите алгоритм для расчета графика аннуитетных платежей, напишите функцию, рассчитывающую график платежей с 5 столбцами: «Месяц», «Ежемесячный платеж», «Основной долг», «Долг по процентам» и «Остаток основного долга».  \n",
     "Написал функцию с помощью Python и библиотеки Pandas  \n",
-    "Можно было использовать вывод переменных нарпямую из базы данных, но пока я не умею подключаться к SQL server через Python. И, как мне кажется, быстрее написать SQL запрос к самой БД, а оттуда выбрать интересующие нас 3 значения по id заявки: сумма кредита, ставка и срок. Протестировал функцию, указывая различные суммы, сроки, ставки - вроде всё работает. В результате указал те значения, что были в примере задания. "
+    "Можно было использовать вывод переменных нарпямую из базы данных, но, как мне кажется, быстрее написать SQL запрос к самой БД, а оттуда выбрать интересующие нас 3 значения по id заявки: сумма кредита, ставка и срок. Протестировал функцию, указывая различные суммы, сроки, ставки - вроде всё работает. "
    ]
   },
   {
