--- a/Case_M.ipynb
+++ b/Case_M.ipynb
@@ -168,9 +168,11 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "\n",
-    "users_area = pd.read_csv(\"SHIFT data/cnum_d.csv\").merge(pd.read_csv(\"SHIFT data/geo_d.csv\"), on=\"msisdn\").rename(columns={\"ts_x\":\"call_time\", \"ts_y\":\"location_time\"}) \\\n",
+    "users_area = pd.read_csv(\"SHIFT data/cnum_d.csv\").merge(pd.read_csv(\"SHIFT data/geo_d.csv\"), on=\"msisdn\") \\\n",
+    "                                                 .rename(columns={\"ts_x\":\"call_time\", \"ts_y\":\"location_time\"}) \\\n",
     "                                                 .merge(pd.read_csv(\"SHIFT data/cities_regions.csv\")[['geo_area_key', 'city_name', 'city_area']], on=\"geo_area_key\")\n",
-    "users_area[\"call_type\"], users_area[\"direction\"] = users_area[\"call_type\"].replace({1:\"звонок\", 2:\"SMS\"}), users_area[\"direction\"].replace({\"0\":\"исходящий\", \"I\":\"входящий\"})\n",
+    "users_area[\"call_type\"], users_area[\"direction\"] = users_area[\"call_type\"].replace({1:\"звонок\", 2:\"SMS\"}), users_area[\"direction\"] \\\n",
+    "                                                                          .replace({\"0\":\"исходящий\", \"I\":\"входящий\"})\n",
     "users_area.head()"
    ]
   },
@@ -309,8 +311,10 @@
     }
    ],
    "source": [
-    "users_interests = pd.read_csv(\"SHIFT data/host_d.csv\").merge(pd.read_csv(\"SHIFT data/host_d.csv\").rename(columns={\"host_name\":\"host\"}), on=\"host\")\n",
-    "twogis_phones = pd.read_csv(\"SHIFT data/twogis_phones.csv\").rename(columns={\"called_party_number\":\"phone_num\"})\n",
+    "users_interests = pd.read_csv(\"SHIFT data/host_d.csv\").merge(pd.read_csv(\"SHIFT data/host_d.csv\") \\\n",
+    "                    .rename(columns={\"host_name\":\"host\"}), on=\"host\")\n",
+    "twogis_phones = pd.read_csv(\"SHIFT data/twogis_phones.csv\") \\\n",
+    "                  .rename(columns={\"called_party_number\":\"phone_num\"})\n",
     "users_interests\n",
     "# При правильной выгрузке данных финальное объединение будет выглядеть так:\n",
     "# users_area.merge(users_interests, on=\"msisdn\").merge(twogis_phones, on=\"called_party_number\")"
@@ -703,7 +707,8 @@
    ],
    "source": [
     "plt.figure(figsize=(14, 6))\n",
-    "sns.lineplot(data=restaurants.groupby([\"business_dt\", \"restaraunt\"], as_index=False).agg({\"money_spent\":\"sum\"}), x=\"business_dt\", y=\"money_spent\", hue=\"restaraunt\")\n"
+    "sns.lineplot(data=restaurants.groupby([\"business_dt\", \"restaraunt\"], as_index=False).agg({\"money_spent\":\"sum\"}),\n",
+    "                                                            x=\"business_dt\", y=\"money_spent\", hue=\"restaraunt\")\n"
    ]
   },
   {
