--- a/Case_M.ipynb
+++ b/Case_M.ipynb
@@ -331,12 +331,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&emsp;Здесь я не вижу смысла продолжать расписывать код, т.к. данных недостаточно даже для тестовой сегментации (у есть информация по месту пребывания всего для одного пользователя), поэтому распишу, как бы я выгружал информацию из БД посредством SQL. Сделаю небольшое допущение и предположу, что для каждого пользователя МТС собирается полная информация о звонках, о посещениях сайтов и о геолокации.  \n",
-    "&emsp;Тогда выгрузим объединённую таблицу. В неё войдут те пользователи, которые проживают в Твери, которые хоть раз были в Центральном районе и которые либо посещали сайт с rubric = Парикмахерская OR = Барбершоп, либо их called_party_number из cnum_d = phone_num из twogis_phones и rubric так же = Парикмахерские OR = Барбершоп. На всякий случай не буду расписывать такой долгий запрос без БД под рукой. Отмечу лишь последовательность объединения:  \n",
-    "*cnum_d нужно объединять сначала с geo_d и cities_regions через INNER JOIN  \n",
-    "далее присоединить host_d через LEFT JOIN  \n",
-    "twogis_hosts с помощью INNER JOIN  \n",
-    "в конце twogis_phones через LEFT JOIN*"
+    "&emsp;Чаще всего парикмахерская - это бизнес, нацеленный на локальную аудиторию. В случае, если мы рассматриваем один из нескольких салонов премиум класса в городе, то тогда мы не так привязаны к географии потребителей - люди, которые готовы платить за стрижку наверняка не ищут самую ближайшую парикмахерскую. Но если парикмахерская, которую открывает наш клиент рассчитана на среднестатистического потребителя, то разумнее будет выделить тех пользователей, которые живут в Центральном районе Твери, т.е. в непосредственной близости к Трёхсвятской д.3.  \n",
+    "Далее, к наиболее интересной для клиента аудитории мы отнесём тех людей, что заходили на сайты, связанные с тематикой парикмахерских или совершали звонки в подобные организации  \n",
+    "&emsp;Сделаю небольшое допущение и предположу, что для каждого пользователя МТС собирается полная информация о звонках, о посещениях сайтов и о геолокации.  \n",
+    "Тогда выгрузим объединённую таблицу. В неё войдут те пользователи, которые проживают в Твери, которые хоть раз были в Центральном районе и которые либо посещали сайт с rubric = Парикмахерская OR = Барбершоп, либо звонили в организацию с такой же rubric. Без БД под рукой будет проблематично написать такой SQL запрос без синтаксических ошибок, но я попробую:  \n",
+    "&emsp;&emsp;&emsp;*SELECT cd.msisdn,  cd.called_party_number, geo.geo_area_key, geo.ts as location_time, cities.city_name, cities.city_area, host_d.host, twogis_hosts.rubric as site_type, twogis_phones.rubric as call_type  \n",
+    "&emsp;&emsp;&emsp;FROM cnum_d as cd*  \n",
+    "&emsp;&emsp;&emsp;*JOIN geo_d as geo ON cd.msisdn = geo.msisdn*  \n",
+    "&emsp;&emsp;&emsp;*JOIN cities_regions as cities ON geo.geo_area_key = cities.geo_area_key*  \n",
+    "&emsp;&emsp;&emsp;*WHERE cities.city_name = “Тверь”*  \n",
+    "&emsp;&emsp;&emsp;*LEFT JOIN host_d ON host_d.msisdn = cd.msisdn*  \n",
+    "&emsp;&emsp;&emsp;*JOIN twogis_hosts ON host_d.host = twogis_hosts.host_name*  \n",
+    "&emsp;&emsp;&emsp;*WHERE cd.msisdn IN  \n",
+    "&emsp;&emsp;&emsp;(SELECT host_d.msisdn FROM host_d JOIN twogis_hosts ON host_d.host = twogis_hosts.host_name WHERE twogis_hosts.rubric = “Парикмахерская” OR twogis_hosts.rubric = “Барбершоп”)*  \n",
+    "&emsp;&emsp;&emsp;*LEFT JOIN twogis_phones ON twogis_phones.phone_num = cd. called_party_number AND (twogis_phones.rubric = “Парикмахерская” OR twogis_phones.rubric = “Барбершоп”)*  \n",
+    "Как мне кажется, стоит выгружать только пользователей из Твери, без привязки к Центральному региону, т.к. местоположение обновляется каждые 10 минут, и некоторые пользователи могли находиться в этом районе всего несколько часов за месяц. Уже в Python можно рассчитать долю пользователей по длительности пребывания по районам. Потом мы присоединяем тех пользователей, кто хоть раз заходил на сайт парикмахерской или барбершопа, а также тех, кто хоть раз звонил в такие организации (или кому звонили)\n"
    ]
   },
   {
