--- a/Case_M.ipynb
+++ b/Case_M.ipynb
@@ -545,7 +545,7 @@
    "source": [
     "import pyodbc\n",
     "import pandas.io.sql as psql\n",
-    "cnxn = pyodbc.connect(\"DRIVER={SQL Server};SERVER=DESKTOP-CO6L7KN\\SHEOGORATH;DATABASE=colors;Trusted_Connection=yes;\")\n",
+    "cnxn = pyodbc.connect(\"DRIVER={SQL Server};SERVER=МОЙ СЕРВЕР;DATABASE=colors;Trusted_Connection=yes;\")\n",
     "cursor = cnxn.cursor()\n",
     "# Мой вариант чтения данных из запроса:\n",
     "# sql = cursor.execute(\"\"\"with a as (select 'Красный' as color \\\n",
